handled fetching places data from the Maps Data Api, PENDING: adjusting layout of places cards, some destination related bugs, Map Route construction linking the local storage to the login data

--- a/CSS/planner.css
+++ b/CSS/planner.css
@@ -1086,6 +1086,7 @@ textarea:focus {
   position: relative;
   left: 2.3%;
   height: 150px;
+  overflow-y: auto;
   border: 1px solid #ffffff;
   border-radius: 20px;
   -webkit-border-radius: 20px;
@@ -1245,7 +1246,9 @@ textarea:focus {
 .search-modal{
   background: #fff;
   height: 700px;
-  width: 500px;
+  width: 600px;
+  position: fixed;
+  right: 20px;
   animation: fadeInRight 0.3s ease-out forwards;
   padding: 20px;
   border-radius: 20px;
@@ -1255,12 +1258,10 @@ textarea:focus {
   display: flex;
   flex-direction: column;
   -webkit-animation: fadeInRight 0.3s ease-out forwards;
-}
-.search{
-  text-align: center;
-}
-.search > div{
-  text-align: center;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 #search-div{
     width: 80%;
@@ -1275,4 +1276,52 @@ textarea:focus {
 .search-overlay {
   justify-content: flex-end;
   align-items: center;
+}
+.search-modal > .modal-footer{
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  left: 0;
+  gap: 5px;
+  width: 100%;
+  overflow-y: auto;
+}
+.place-card{
+  width: 100%;
+  height: 50%;
+  padding: 8px;
+  padding-left: 20px;
+  border: 1px solid rgba(0,0,0,0.5);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+.place-card  img{
+  width: 203px;
+  margin-right: 20px;
+  height: 135px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+#place-card-flex{
+  display: flex;
+  flex-direction: row;
+}
+#place-card-Deets{
+  align-items: flex-start;
+}
+.timelineditiDiv{
+  display: flex;
+  flex-direction: column;
+}
+#timelineditiContainer{
+  display: flex;
+  flex-direction: row;
 }
